--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
     "firebase": "^7.12.0",
+    "heroku": "^7.39.2",
     "md5": "^2.2.1",
     "mime": "^2.4.4",
     "moment": "^2.24.0",
